2025-10-11T00:56:11Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/18421961300 # 793
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81--gh-stats/commits?branch=master&time_zone=utc&until=2025-10-11
* notice: last 14d: unq all: 2 2
* notice: prev accum: outdated-unq outdated-all / unq all: 401 575 / 404 578
* notice: next accum: outdated-unq outdated-all / unq all: 402 576 / 404 578
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-09-26] / []

2025-10-05T01:04:13Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/18251837344 # 787
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81--gh-stats/commits?branch=master&time_zone=utc&until=2025-10-05
* notice: last 14d: unq all: 3 3
* notice: prev accum: outdated-unq outdated-all / unq all: 400 574 / 404 578
* notice: next accum: outdated-unq outdated-all / unq all: 401 575 / 404 578
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-09-20] / []

2025-10-03T00:57:51Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/18209728430 # 785
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81--gh-stats/commits?branch=master&time_zone=utc&until=2025-10-03
* notice: last 14d: unq all: 4 4
* notice: prev accum: outdated-unq outdated-all / unq all: 399 573 / 404 578
* notice: next accum: outdated-unq outdated-all / unq all: 400 574 / 404 578
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-09-18] / []

2025-10-01T01:05:53Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/18147908689 # 783