@@ -1,12 +1,12 @@
 {
-  "timestamp" : "2025-10-11T00:56:11Z",
-  "count_outdated" : 576,
-  "uniques_outdated" : 402,
-  "count" : 578,
-  "uniques" : 404,
+  "timestamp" : "2025-10-12T01:01:40Z",
+  "count_outdated" : 577,
+  "uniques_outdated" : 403,
+  "count" : 579,
+  "uniques" : 405,
   "clones" : [
     {
-      "timestamp": "2025-09-27T00:00:00Z",
+      "timestamp": "2025-09-30T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
@@ -15,7 +15,7 @@
       "uniques_decinc": [ 0, 1 ]
     },
     {
-      "timestamp": "2025-09-30T00:00:00Z",
+      "timestamp": "2025-10-11T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
